[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft300s-stream-py"
version = "0.1.0"
description = "FT300-S Force/Torque Sensor Streaming Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "libscrc>=1.8.1",
    "minimalmodbus>=2.1.1",
    "pyserial>=3.5",
]
